Simple reading of CSV abd print out fields.
- Add CSV Reader dependency.
- Simple reading of csv and print out fields.
- New CSV Named Row class.
-Update .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ target/
 # Big test files
 src/test/resources/Parking_Tags_Data_2012.csv
 src/test/resources/parking_tickets_data_2012.zip
+
+# Eclipse files
+.classpath
+.project
+.settings/*
+
+# Java compiled files
+*.class
