--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
             <version>1.7.2</version>
         </dependency>
 		<dependency>
-			<groupId>net.sf.opencsv</groupId>
-			<artifactId>opencsv</artifactId>
-			<version>2.0</version>
-		</dependency>        
+		    <groupId>net.sourceforge.javacsv</groupId>
+		    <artifactId>javacsv</artifactId>
+		    <version>2.0</version>
+		</dependency>            		                  
     </dependencies>
 
     <build>
