--- a/.classpath
+++ b/.classpath
@@ -11,6 +11,6 @@
 	<classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/hppc-0.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/trove-3.0.3.jar"/>
-	<classpathentry kind="lib" path="lib/disruptor-3.1.1.jar" sourcepath="lib/disruptor-3.1.1-javadoc.jar"/>
+	<classpathentry kind="lib" path="lib/disruptor-2.10.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
