--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,12 @@
 		    <groupId>net.sourceforge.javacsv</groupId>
 		    <artifactId>javacsv</artifactId>
 		    <version>2.0</version>
-		</dependency>            		                  
+		</dependency>         
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.1</version>
+        </dependency>		   		                  
     </dependencies>
 
     <build>
