--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>3.1</version>
-        </dependency>		   		                  
+        </dependency>	
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.0</version>
+        </dependency>            	   		                 
     </dependencies>
 
     <build>
