--- a/pom.xml
+++ b/pom.xml
@@ -40,10 +40,10 @@
             <version>3.1</version>
         </dependency>	
         <dependency>
-            <groupId>commons-collections</groupId>
-            <artifactId>commons-collections</artifactId>
-            <version>3.0</version>
-        </dependency>            	   		                 
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava-collections</artifactId>
+            <version>r03</version>
+        </dependency>
     </dependencies>
 
     <build>
