--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ target/
 # Big test files
 src/test/resources/Parking_Tags_Data_2012.csv
 src/test/resources/parking_tickets_data_2012.zip
+
+# Eclipse
+.classpath
+.project
+.settings
