Working parallel version

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,7 @@ target/
 
 # Big test files
 src/test/resources/Parking_Tags_Data_2012.csv
-src/test/resources/parking_tickets_data_2012.zip
+parking_tickets_data_2012.zip
+
+# archive of solutions
+solutions/
