--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <artifactId>junit-dep</artifactId>
             <version>4.11</version>
         </dependency>
         <dependency>
@@ -60,7 +60,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.15</version>
                 <configuration>
                     <argLine>-Xms1G -Xmx1G</argLine>
                 </configuration>
